Use `toList` (#1387)